--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     restart: always
     build: .
     environment:
-      - MONGO_URI=mongodb://db:27017
+      - MONGO_URI=mongodb://db:27017/goomer
     ports:
       - "3000:3000"
     depends_on:
