--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     restart: always
     build: .
     environment:
-      - MONGO_URI=mongodb://db:27017/goomer
+      - MONGO_URI=mongodb://db:27017/goomer_rango
     ports:
       - "3000:3000"
     depends_on:
@@ -13,7 +13,7 @@ services:
     networks:
      - backend
     volumes:
-     - ./uploads:/usr/uploads
+     - ./uploads:/usr/src/app/uploads
   db:
     image: mongo
     volumes:
