--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@nestjs/core": "^6.7.2",
     "@nestjs/mongoose": "^6.2.1",
     "@nestjs/platform-express": "^6.7.2",
+    "@nestjs/swagger": "^4.1.15",
     "mongoose": "^5.8.9",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
-    "rxjs": "^6.5.3"
+    "rxjs": "^6.5.3",
+    "swagger-ui-express": "^4.1.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.9.0",
