--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,8 @@ lerna-debug.log*
 !.vscode/launch.json
 !.vscode/extensions.json
 
+# exclude everything
 uploads/*
+
+# exception to the rule
+!uploads/.gitkeep 
