--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3",
-    "swagger-ui-express": "^4.1.3"
+    "swagger-ui-express": "^4.1.3",    
+    "class-validator":"^0.11.0",
+    "class-transformer":"^0.2.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.9.0",
