--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
      - ./uploads:/usr/src/app/uploads
   db:
     image: mongo
+    networks:
+      - backend
     volumes:
       - db-data:/data/db
     ports:
